UserProc problems fixed

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,8 +1,8 @@
-MoveWindow IDM_PARAM_WINDOW -287 1390 316 283
-ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -312 1388 316 283
+ShowWindow IDM_PARAM_WINDOW SW_HIDE
 MoveWindow IDM_CONS_WINDOW 277 277 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -292 1670 301 201
+MoveWindow IDM_CRSR_WINDOW -320 1680 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW -1844 1087 1316 1008
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
