--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,5 +1,5 @@
 MoveWindow IDM_PARAM_WINDOW -312 1388 316 283
-ShowWindow IDM_PARAM_WINDOW SW_HIDE
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW 277 277 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -320 1680 301 201
