--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,7 +1,7 @@
-MoveWindow IDM_PARAM_WINDOW -312 1388 316 283
-ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW 277 277 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MONITOR_WINDOW -953 1338 561 264
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -320 1680 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW -1844 1087 1316 1008
@@ -12,5 +12,7 @@ MoveWindow IDM_MINI_WINDOW -492 1094 503 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1836 1139 1300 926
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -312 1388 316 283
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -295 1870 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
