--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="NNetColors.h" />
     <ClInclude Include="NNetModel.h" />
+    <ClInclude Include="NNetModelCommands.h" />
     <ClInclude Include="NNetModelReaderInterface.h" />
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetModelWriterInterface.h" />
@@ -225,6 +226,7 @@
       <EnableParallelCodeGeneration Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </EnableParallelCodeGeneration>
     </ClCompile>
+    <ClCompile Include="NNetModelCommands.cpp" />
     <ClCompile Include="NNetModelReaderInterface.cpp" />
     <ClCompile Include="NNetModelStorage.cpp" />
     <ClCompile Include="NNetModelWriterInterface.cpp" />
