CircleType added, MonitorWindow

--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="SoundInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CircleType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp">
