--- a/NNet/Models/WindowConfiguration1.cnf
+++ b/NNet/Models/WindowConfiguration1.cnf
@@ -1,14 +1,18 @@
-MoveWindow IDM_PARAM_WINDOW 939 455 316 283
-ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 226 226 922 517
+MoveWindow IDM_CONS_WINDOW 277 277 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 301 201
+MoveWindow IDM_MONITOR_WINDOW -1350 1751 678 301
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW -320 1680 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1843 1193 1646 862
+MoveWindow IDM_APPL_WINDOW 193 34 1316 1008
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 0 0 301 301
+MoveWindow IDM_DESC_WINDOW -518 1389 210 294
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -492 1094 503 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1835 1245 1630 780
+MoveWindow IDM_MAIN_WINDOW 201 86 1300 926
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 47 21 301 251
+MoveWindow IDM_PARAM_WINDOW -312 1388 316 283
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PERF_WINDOW -295 1870 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
