--- a/NNet/NNetSimu/NNetSimuWindows.vcxproj
+++ b/NNet/NNetSimu/NNetSimuWindows.vcxproj
@@ -166,7 +166,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AnimationThread.h" />
+    <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
