--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -591,8 +591,9 @@
     <ClCompile Include="win32_triggerSoundDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AnimationThread.h" />
+    <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="AutoOpen.h" />
+    <ClInclude Include="BeaconAnimation.h" />
     <ClInclude Include="ComputeThread.h" />
     <ClInclude Include="D2D_DrawContext.h" />
     <ClInclude Include="NNetWinWrappers.h" />
