--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="InputNeuron.h" />
     <ClInclude Include="Knot.h" />
     <ClInclude Include="ModelDescription.h" />
+    <ClInclude Include="Monitor.h" />
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="NNetColors.h" />
     <ClInclude Include="NNetModel.h" />
