--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -69,11 +69,12 @@
   <ItemGroup>
     <ClInclude Include="AddIncoming2KnotCommand.h" />
     <ClInclude Include="AddIncoming2PipeCommand.h" />
-    <ClInclude Include="AddModel.h" />
+    <ClInclude Include="AddModelCommand.h" />
     <ClInclude Include="AddOutgoing2KnotCommand.h" />
     <ClInclude Include="AddOutgoing2PipeCommand.h" />
     <ClInclude Include="AnalyzeAnomaliesCommand.h" />
     <ClInclude Include="AnalyzeLoopsCommand.h" />
+    <ClInclude Include="Attach2MonitorCommand.h" />
     <ClInclude Include="ClearBeepersCommand.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandStack.h" />
