--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="DeletePipeCommand.h" />
     <ClInclude Include="DisconnectBaseKnotCommand.h" />
     <ClInclude Include="InsertNeuronCommand.h" />
+    <ClInclude Include="InsertTrackCommand.h" />
     <ClInclude Include="MarkSelectionCommand.h" />
     <ClInclude Include="MoveBaseKnotCommand.h" />
     <ClInclude Include="MoveCommand.h" />
