--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -245,6 +245,7 @@
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="ShapeList.cpp" />
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="tParameter.cpp" />
     <ClCompile Include="ShapeType.cpp" />
