Monitor: Measurement implemented

--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -571,6 +571,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ComputeThread.cpp" />
+    <ClCompile Include="Measurement.cpp" />
     <ClCompile Include="NNetWinWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
@@ -596,6 +597,7 @@
     <ClInclude Include="BeaconAnimation.h" />
     <ClInclude Include="ComputeThread.h" />
     <ClInclude Include="D2D_DrawContext.h" />
+    <ClInclude Include="Measurement.h" />
     <ClInclude Include="NNetWinWrappers.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="Resource.h" />
