--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp" />
+    <ClCompile Include="MoreTypes.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
     <ClCompile Include="TextBuffer.cpp" />
     <ClCompile Include="trace.cpp" />
