--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,7 +1,7 @@
 MoveWindow IDM_CONS_WINDOW 226 226 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MONITOR_WINDOW -771 1697 484 397
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_CRSR_WINDOW -296 1588 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW -1921 1084 1642 1042
