--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -185,6 +185,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Analyzer.h" />
+    <ClInclude Include="AnimationInterface.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="Connections.h" />
     <ClInclude Include="DrawContext.h" />
@@ -207,15 +208,17 @@
     <ClInclude Include="PipeList.h" />
     <ClInclude Include="ShapeErrorHandler.h" />
     <ClInclude Include="ShapeList.h" />
-    <ClInclude Include="Signal.h" />
+    <ClInclude Include="SignalFactory.h" />
+    <ClInclude Include="SignalInterface.h" />
     <ClInclude Include="scale.h" />
     <ClInclude Include="NNetError.h" />
     <ClInclude Include="Segment.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="ShapeId.h" />
-    <ClInclude Include="SignalFactory.h" />
     <ClInclude Include="SignalId.h" />
+    <ClInclude Include="SingleSignal.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SumSignal.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
     <ClInclude Include="tParameter.h" />
@@ -248,7 +251,8 @@
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="ShapeList.cpp" />
-    <ClCompile Include="Signal.cpp" />
+    <ClCompile Include="SignalInterface.cpp" />
+    <ClCompile Include="SumSignal.cpp" />
     <ClCompile Include="tParameter.cpp" />
     <ClCompile Include="ShapeType.cpp" />
     <ClCompile Include="Track.cpp" />
