--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="MoveSelectionCommand.h" />
     <ClInclude Include="NewInputNeuronCommand.h" />
     <ClInclude Include="NewNeuronCommand.h" />
+    <ClInclude Include="NewSumSignalCommand.h" />
     <ClInclude Include="SelectAllBeepersCommand.h" />
     <ClInclude Include="SelectAllCommand.h" />
     <ClInclude Include="SelectionCommand.h" />
