Console window removed

--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,18 +1,16 @@
-MoveWindow IDM_CONS_WINDOW 173 430 922 517
-ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -296 1588 301 201
+MoveWindow IDM_CRSR_WINDOW 0 300 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1921 1084 1642 1042
+MoveWindow IDM_APPL_WINDOW 234 234 1646 862
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -736 1318 709 407
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -295 1779 301 105
-ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MINI_WINDOW -292 1079 301 246
+MoveWindow IDM_MONITOR_WINDOW 200 0 136 201
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_DESC_WINDOW 0 0 301 301
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 0 0 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1913 1136 1626 960
+MoveWindow IDM_MAIN_WINDOW 242 286 1630 780
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -299 1317 316 283
+MoveWindow IDM_PARAM_WINDOW 939 455 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -296 1875 301 251
+MoveWindow IDM_PERF_WINDOW 0 0 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
