--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,16 +1,16 @@
-MoveWindow IDM_CRSR_WINDOW 0 300 301 201
+MoveWindow IDM_CRSR_WINDOW -295 1403 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 234 234 1646 862
+MoveWindow IDM_APPL_WINDOW -1919 1082 1626 757
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 136 201
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_DESC_WINDOW 0 0 301 301
+MoveWindow IDM_MONITOR_WINDOW -1922 1838 1338 288
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_DESC_WINDOW -594 1835 301 289
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 0 0 301 301
+MoveWindow IDM_MINI_WINDOW -303 1086 306 323
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 242 286 1630 780
+MoveWindow IDM_MAIN_WINDOW -1911 1134 1610 675
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW 939 455 316 283
+MoveWindow IDM_PARAM_WINDOW -308 1599 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 301 251
+MoveWindow IDM_PERF_WINDOW -297 1875 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
