--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -209,7 +209,7 @@
     <ClInclude Include="ShapeErrorHandler.h" />
     <ClInclude Include="ShapeList.h" />
     <ClInclude Include="SignalFactory.h" />
-    <ClInclude Include="SignalInterface.h" />
+    <ClInclude Include="Signal.h" />
     <ClInclude Include="scale.h" />
     <ClInclude Include="NNetError.h" />
     <ClInclude Include="Segment.h" />
@@ -217,7 +217,6 @@
     <ClInclude Include="ShapeId.h" />
     <ClInclude Include="SignalId.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="SumSignal.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
     <ClInclude Include="tParameter.h" />
@@ -251,8 +250,7 @@
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="ShapeList.cpp" />
-    <ClCompile Include="SignalInterface.cpp" />
-    <ClCompile Include="SumSignal.cpp" />
+    <ClCompile Include="Signal.cpp" />
     <ClCompile Include="tParameter.cpp" />
     <ClCompile Include="ShapeType.cpp" />
     <ClCompile Include="Track.cpp" />
