--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -221,7 +221,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
-    <ClInclude Include="tParameter.h" />
+    <ClInclude Include="ParameterType.h" />
     <ClInclude Include="ShapeType.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="TrackNr.h" />
@@ -252,7 +252,7 @@
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="ShapeList.cpp" />
     <ClCompile Include="Signal.cpp" />
-    <ClCompile Include="tParameter.cpp" />
+    <ClCompile Include="ParameterType.cpp" />
     <ClCompile Include="ShapeType.cpp" />
     <ClCompile Include="Track.cpp" />
   </ItemGroup>
