Refactoring. Compiles. Not tested.

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -72,8 +72,7 @@
     <ClInclude Include="AddModelCommand.h" />
     <ClInclude Include="AddOutgoing2KnotCommand.h" />
     <ClInclude Include="AddOutgoing2PipeCommand.h" />
-    <ClInclude Include="AnalyzeAnomaliesCommand.h" />
-    <ClInclude Include="AnalyzeLoopsCommand.h" />
+    <ClInclude Include="AnalyzeCommand.h" />
     <ClInclude Include="AppendInputNeuronCommand.h" />
     <ClInclude Include="AppendNeuronCommand.h" />
     <ClInclude Include="ClearBeepersCommand.h" />
