--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -198,8 +198,8 @@
     <ClInclude Include="NNetColors.h" />
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetModelCommands.h" />
-    <ClInclude Include="NNetModelExport.h" />
-    <ClInclude Include="NNetModelImport.h" />
+    <ClInclude Include="NNetModelExporter.h" />
+    <ClInclude Include="NNetModelImporter.h" />
     <ClInclude Include="NNetModelReaderInterface.h" />
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetModelWriterInterface.h" />
@@ -240,8 +240,8 @@
       </EnableParallelCodeGeneration>
     </ClCompile>
     <ClCompile Include="NNetModelCommands.cpp" />
-    <ClCompile Include="NNetModelExport.cpp" />
-    <ClCompile Include="NNetModelImport.cpp" />
+    <ClCompile Include="NNetModelExporter.cpp" />
+    <ClCompile Include="NNetModelImporter.cpp" />
     <ClCompile Include="NNetModelReaderInterface.cpp" />
     <ClCompile Include="NNetModelWriterInterface.cpp" />
     <ClCompile Include="NNetParameters.cpp" />
