--- a/NNet/NNetSimu/WindowConfiguration25.cnf
+++ b/NNet/NNetSimu/WindowConfiguration25.cnf
@@ -1,18 +1,16 @@
-MoveWindow IDM_CONS_WINDOW 226 226 922 517
-ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -314 1916 301 201
+MoveWindow IDM_CRSR_WINDOW -297 1374 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1892 1308 1320 797
+MoveWindow IDM_APPL_WINDOW -1887 1083 1593 1038
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1017 1604 918 496
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -325 1389 301 301
+MoveWindow IDM_MONITOR_WINDOW 200 0 136 201
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_DESC_WINDOW -300 1573 301 260
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -638 1086 301 208
+MoveWindow IDM_MINI_WINDOW -300 1075 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1884 1360 1304 715
+MoveWindow IDM_MAIN_WINDOW -1879 1135 1577 956
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -336 1092 316 283
+MoveWindow IDM_PARAM_WINDOW -316 1824 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -319 1708 301 251
+MoveWindow IDM_PERF_WINDOW -612 1872 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
