--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Measurement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="D2D_DrawContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_NNetWindow.h">
