--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -189,10 +189,11 @@
     <ClInclude Include="AutoOpen.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="Connections.h" />
+    <ClInclude Include="DescriptionUI.h" />
     <ClInclude Include="DrawContext.h" />
     <ClInclude Include="InputNeuron.h" />
+    <ClInclude Include="ModuleInterface.h" />
     <ClInclude Include="Knot.h" />
-    <ClInclude Include="ModelDescription.h" />
     <ClInclude Include="ModelUtilities.h" />
     <ClInclude Include="MonitorData.h" />
     <ClInclude Include="Neuron.h" />
