Align shapes starts to work, still buggy

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="DisconnectBaseKnotCommand.h" />
     <ClInclude Include="InsertBaseKnotCommand.h" />
     <ClInclude Include="MoveBaseKnotCommand.h" />
+    <ClInclude Include="SetBaseKnotsCommand.h" />
     <ClInclude Include="MoveCommand.h" />
     <ClInclude Include="MovePipeCommand.h" />
     <ClInclude Include="MoveSelectionCommand.h" />
