--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -101,6 +101,7 @@ IDC_NNET_SIMU_MAIN ACCELERATORS
     "p",            IDM_PARAM_WINDOW, ASCII,   ALT
     "m",            IDM_MINI_WINDOW,  ASCII,   ALT
     "?",            IDM_ABOUT,        ASCII,   ALT
-	VK_DELETE,      IDM_DELETE,       VIRTKEY
-	VK_ESCAPE,      IDM_ESCAPE,       VIRTKEY
+    VK_BACK,        IDM_UNDO,         VIRTKEY, ALT
+    VK_DELETE,      IDM_DELETE,       VIRTKEY
+    VK_ESCAPE,      IDM_ESCAPE,       VIRTKEY
 }
